--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 0.3.2
 homepage: https://github.com/aker99/social_embed_webview
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=2.0.2 <3.0.0"
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: '>=3.10.0'
 
 dependencies:
   flutter:
