--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,16 +4,16 @@ version: 0.3.2
 homepage: https://github.com/aker99/social_embed_webview
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
-  flutter: '>=3.10.0'
+  sdk: '>=3.4.0 <4.0.0'
+  flutter: ">=3.22.2"
 
 dependencies:
   flutter:
     sdk: flutter
-  webview_flutter: ^4.0.5
-  url_launcher: ^6.0.3
-  localstorage: ^4.0.0+1
-  http: ^1.1.0
+  webview_flutter: ^4.8.0
+  url_launcher: ^6.3.0
+  localstorage: ^5.0.0
+  http: ^1.2.1
 
 
 dev_dependencies:
